14566
When trying this:
{code}
  scala> val a: Vector[_ <: Vector[Any]] = Array(Array("", 0))
{code}
I get a truncated error message which misses the important part:
{code}
<console>:5: error: overloaded method value apply with alternatives (x: Unit,xs: Unit*)Array[Unit] <and> (x: Double,xs: Double*)Array[Double] <and> (x: Float,xs: Float*)Array[Float] <and> (x: Long,xs: Long*)Array[Long] <and> (x: Int,xs: Int*)Array[Int] <and> (x: Char,xs: Char*)Array[Char] <and> (x: Short,xs: Short*)Array[Short] <and> (x: Byte,xs: Byte*)Array[Byte] <and> (x: Boolean,xs...
       val a: Vector[_ <: Vector[Any]] = Array(Array("": Any, 0: Any))
                                         ^
{code}
Obviously, console error messages are truncated a bit too aggressivly. The bug should go to whoever last touched reporters.
